objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Product_Name__c</fullName>
        <formula>LEFT( Opportunity.Account.Name &amp;&quot; - &quot;&amp; Name__c , 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name - Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_eCPM__c</fullName>
        <label>Booked eCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_by_AE__c</fullName>
        <formula>Opportunity.Closed_by_AE__c</formula>
        <label>Closed by AE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Notes__c</fullName>
        <description>Used to view notes for commissions - Finance Only</description>
        <label>Commission Notes</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Time and Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Sales_Price_Fair_Value__c</fullName>
        <description>Fair value in dollars allocated to specific product used for financial reporting.</description>
        <formula>IF(ISPICKVAL(PricebookEntry.Product2.ProductSubFamily__c, &apos;Monthly API&apos;),
    UnitPrice,    
    CASE(PricebookEntry.Product2.Family, 
        &quot;Services&quot;, UnitPrice, 
        &quot;Services Annual Recurring&quot;, UnitPrice, 
        &quot;Integration&quot;, UnitPrice, 
        &quot;License&quot;, (Opportunity.Roll_up_of_Contract_Sales_Price__c * Fair_Value_Allocation__c),
        null
    )
)</formula>
        <inlineHelpText>Fair value in dollars allocated to specific product used for financial reporting.</inlineHelpText>
        <label>Fair Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>List if the product contract type is fixed or attributable</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Attributable</fullName>
                </value>
                <value>
                    <fullName>Fixed/Attributable</fullName>
                </value>
                <value>
                    <fullName>Grid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Resource_Role__c</fullName>
        <formula>IF( ISBLANK(TEXT( PricebookEntry.Product2.Resource_Role__c )),&quot;Technical Consultant&quot;, TEXT(PricebookEntry.Product2.Resource_Role__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Resource Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delayed_Release_FINANCE_ONLY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to correct back commissions for one time use only</description>
        <label>Delayed Release (FINANCE ONLY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Calculated__c</fullName>
        <description>Calculated discount %.</description>
        <formula>IF(List_Price__c =0,0, 
1-( UnitPrice/List_Price__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated discount % 1- (Contract Sales Price/ List Price)</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_from_List__c</fullName>
        <description>Discount in Dollars (Discount % * List Price)</description>
        <formula>IF(List_Price__c == 0, 0, List_Price__c - UnitPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount in Dollars (Discount % * List Price)</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Bill_Rate__c</fullName>
        <formula>IF( 

 Milestone_Category__c &lt;&gt; &quot;Hourly&quot;

,
0
,
UnitPrice /  Hours_Info_Only__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FV_Impacted_Commission__c</fullName>
        <description>Contract Sales Price * % Paid Out</description>
        <formula>Percentage_Paid_Out__c  *  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Sales Price * % Paid Out</inlineHelpText>
        <label>Balance Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_Value_Allocation__c</fullName>
        <description>Finance field used to allocate value of products for reporting purposes.</description>
        <formula>IF(Opportunity.Roll_Up_Indiv_License_List__c &lt;&gt; 0,
    IF(ISPICKVAL(PricebookEntry.Product2.ProductSubFamily__c, &apos;Monthly API&apos;),
        1,
        CASE(PricebookEntry.Product2.X2_0_Product_Family__c, 
            &quot;Recommend&quot;, (List_Price__c / Opportunity.Roll_Up_Indiv_License_List__c), 
            &quot;BYOS&quot;, (List_Price__c / Opportunity.Roll_Up_Indiv_License_List__c), 
            &quot;Services&quot;, 1,
            &quot;Services Annual Recurring&quot;, 1, 
            &quot;Integration&quot;, 1, 
            &quot;Discover&quot;, (List_Price__c / Opportunity.Roll_Up_Indiv_License_List__c), 
            &quot;Engage&quot;, (List_Price__c / Opportunity.Roll_Up_Indiv_License_List__c), 
            &quot;Build&quot;, (List_Price__c / Opportunity.Roll_Up_Indiv_License_List__c), 
            &quot;Find&quot;, (List_Price__c / Opportunity.Roll_Up_Indiv_License_List__c),
            &quot;Renewal&quot;, (List_Price__c / Opportunity.Roll_Up_Indiv_License_List__c),
            null
        )
    ),
    null
)</formula>
        <inlineHelpText>Finance field used to allocate value of products for reporting purposes.</inlineHelpText>
        <label>Fair Value Allocation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fair_Value_In_store_Prod_Allocation__c</fullName>
        <description>Takes the Fair Value at the product level and distributes it by channel allocation for In-Store Revenue.</description>
        <formula>Contract_Sales_Price_Fair_Value__c * (  Opportunity.In_Store_Opportunity_Amount__c  / Opportunity.Amount )</formula>
        <inlineHelpText>Takes the Fair Value at the product level and distributes it by channel allocation for In-Store Revenue.</inlineHelpText>
        <label>Fair Value In-store Prod Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_Value_Mobile_Allocation__c</fullName>
        <description>Takes the Fair Value and distributes at the product level to the Mobile Channel</description>
        <formula>Contract_Sales_Price_Fair_Value__c * (  Opportunity.Mobile_Opportunity_Amount__c / Opportunity.Amount )</formula>
        <inlineHelpText>Takes the Fair Value and distributes at the product level to the Mobile Channel</inlineHelpText>
        <label>Fair Value Mobile Product Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_Value_Phone__c</fullName>
        <formula>Contract_Sales_Price_Fair_Value__c * (  Opportunity.Phone_Call_Center_Opportunity_Amount__c  / Opportunity.Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fair Value Phone Product Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_Value_Web_Online_Allocation__c</fullName>
        <formula>Contract_Sales_Price_Fair_Value__c * ( Opportunity.Online_Opportunity_Amount__c / Opportunity.Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fair Value Web (Online) Prod Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Check_Complete__c</fullName>
        <description>Financial Operations must verify Opportunity is correct prior to Client Services creating a project from an opportunity.</description>
        <formula>Opportunity.Operations_Check_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Financial Operations must verify Opportunity is correct prior to Client Services creating a project from an opportunity.</inlineHelpText>
        <label>Finance Check Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Fair_Value__c</fullName>
        <label>Hold: Old Fair Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Info_Only__c</fullName>
        <description>Number of Hours for a services Engagement. This is not a calculated field, but used to capture hours for informational purposes.</description>
        <inlineHelpText>Number of Hours for a services Engagement. This is not a calculated field, but used to capture hours for informational purposes.</inlineHelpText>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCloned__c</fullName>
        <formula>Opportunity.isCloned__c</formula>
        <label>IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>Custom list price for Sales folks to enter</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone_Category__c</fullName>
        <formula>IF(TEXT (PricebookEntry.Product2.Recognition_Type__c) = &apos;Hourly&apos; &amp;&amp; TEXT(PricebookEntry.Product2.Family) = &quot;Services&quot; , &quot;Hourly&quot;, 

IF( TEXT (PricebookEntry.Product2.Recognition_Type__c) = &apos;On Completion&apos; &amp;&amp; TEXT(PricebookEntry.Product2.Family) = &quot;Services&quot;, &quot;None&quot;, 

IF(TEXT(PricebookEntry.Product2.Family) = &quot;License&quot;, TEXT(PricebookEntry.Product2.X2_0_Product_Family__c),

IF(TEXT(PricebookEntry.Product2.Family) = &quot;Integration&quot;, TEXT(PricebookEntry.Product2.Product_Sub_Category__c),

CASE(PricebookEntry.Product2.Family, 

&quot;Recommend&quot;, &quot;Recommend&quot;, 
&quot;Discover&quot;, &quot;Discover&quot;, 
&quot;Engage&quot;, &quot;Engage&quot;, 
&quot;Build&quot;, &quot;Build&quot;, 
&quot;Platform&quot;, &quot;Platform&quot;, 
&quot;Legacy&quot;, &quot;Recommend&quot;, 

&quot;None&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSA Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Miscellaneous Adjustment</label>
        <referenceTo>pse__Miscellaneous_Adjustment__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Deferral_Release_Date__c</fullName>
        <description>If % Paid out is modified, edit Next Deferral&apos;s release date</description>
        <inlineHelpText>If you modified the % Paid out, make sure to edit the next Deferral&apos;s release date</inlineHelpText>
        <label>Next Deferral Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Region__c</fullName>
        <formula>Opportunity.pse__Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Terms__c</fullName>
        <label>Special Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_ProjectType__c</fullName>
        <formula>PricebookEntry.Product2.PSA_Project_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSA Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Project_Type__c</fullName>
        <description>Read-only Field that populated PSA Project Type for Milestone/Misc Adjustment Determination</description>
        <formula>PricebookEntry.Product2.PSA_Project_Type__c</formula>
        <inlineHelpText>Read-only Field that populated PSA Project Type for Milestone/Misc Adjustment Determination</inlineHelpText>
        <label>PSA Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Paid_Out__c</fullName>
        <defaultValue>1</defaultValue>
        <description>% of commission that will be paid</description>
        <inlineHelpText>% of commission that will be paid</inlineHelpText>
        <label>% Paid Out</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCategoryText__c</fullName>
        <description>Stores text value from Product Category picklist on Product Record.  Used to calculate fair value.</description>
        <label>Product Category Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductTypeText__c</fullName>
        <description>Stores text value of Product Type field from the product record.  Used for fair value calculation</description>
        <label>Product Type Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <label>Retailer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Kohls</fullName>
                </value>
                <value>
                    <fullName>Meijer</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>Sears</fullName>
                </value>
                <value>
                    <fullName>RichRelevance</fullName>
                </value>
                <value>
                    <fullName>Home Depot</fullName>
                </value>
                <value>
                    <fullName>1-800-Flowers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_0_Product_Family2__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.X2_0_Product_Family__c)</formula>
        <label>2.0 Product Family</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Contract_Type_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND (  ISPICKVAL(Opportunity.StageName, &quot;90% - Legal Review&quot;) ,  ISPICKVAL(Contract_Type__c,&quot;&quot; ))</errorConditionFormula>
        <errorDisplayField>Contract_Type__c</errorDisplayField>
        <errorMessage>Contract Type Needs to be filled out before going to 90%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_paid_out_higher_100</fullName>
        <active>true</active>
        <description>Error if user tries to enter number higher than 100%</description>
        <errorConditionFormula>Percentage_Paid_Out__c &gt; 1</errorConditionFormula>
        <errorDisplayField>Percentage_Paid_Out__c</errorDisplayField>
        <errorMessage>You cannot enter a percentage higher than 100%</errorMessage>
    </validationRules>
</CustomObject>